[package]
name = "biggur"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2018"

[dependencies]
cast = "0.2"
chrono = "0.4"
failure = "0.1"
log = "0.4"
pretty_env_logger = "0.3"
reqwest = "0.9"
serde_json = "1"

[dependencies.rusqlite]
features = ["bundled", "chrono", "serde_json"]
version = "0.20"
