[package]
name = "biggur"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2021"

[dependencies]
chrono = "0.4"
failure = "0.1"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = "0.9"
serde_json = "1"

[dependencies.rusqlite]
features = ["bundled", "chrono", "serde_json"]
version = "0.28"
