[package]
name = "biggur"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1"

[dependencies.rusqlite]
features = ["bundled", "chrono", "serde_json"]
version = "0.28"
